--- a/lab5/styles.css
+++ b/lab5/styles.css
@@ -27,7 +27,12 @@ nav a:hover {
     color: white;
 }
 
-h1, h2 {
+h1 {
+    color: #7700ff;
+    text-transform: uppercase;
+}
+
+h2 {
     color: #7700ff;
 }
 
@@ -105,20 +110,36 @@ section h3 {
     margin-bottom: 10px;
 }
 
-section ul {
+section ul,
+section ol {
     padding-left: 20px;
+    list-style-type: none; 
 }
 
-section ul li {
+section ul li,
+section ol li {
     margin-bottom: 8px;
     color: #e0e0e0;
+    position: relative;
+    padding-left: 20px;
+    font-size: 200%; 
 }
 
-iframe {
-    border: none;
-    width: 100%;
-    height: 400px;
-    margin-top: 10px;
+section ul li::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 10px;
+    height: 10px;
+    background-color: #721ee0; /* Cor dos pontos alterada para #721ee0 */
+    border-radius: 50%;
+}
+
+.numeros-romanos {
+    list-style-type: upper-roman;
+    padding-left: 20px;
 }
 
 #tabela {
@@ -139,8 +160,12 @@ iframe {
     color: white;
 }
 
-#tabela td {
+#tabela tr:nth-child(odd) {
     background-color: #2c2c2c;
+}
+
+#tabela tr:nth-child(even) {
+    background-color: #1c1c1c;
 }
 
 .container {
@@ -169,4 +194,3 @@ article p {
     line-height: 1.8;
     color: #e0e0e0;
 }
-
