--- a/styles.css
+++ b/styles.css
@@ -154,4 +154,6 @@ section{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-position: fixed;
+    
 }
