--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
+/* Reset */
 @import url("https://fonts.googleapis.com/css2?family=Freckle+Face&family=Rubik+Puddles&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dokdo&display=swap");
 
@@ -94,6 +90,7 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -108,17 +105,21 @@ nav,
 section {
   display: block;
 }
+
 body {
   line-height: 1;
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -126,21 +127,16 @@ q:after {
   content: "";
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-.cabeca {
-  /* background-color: black;*/
-  /* padding: .18em;*/
-  /* width: fit-content;*/
-}
-
 header {
-  height: 100vh;
+  height: fit-content;
   color: #7700ff;
-  background-image: url("/images/My\ Neighbor\ Totoro.gif");
+  background-image: url("/images/My Neighbor Totoro.gif");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -152,23 +148,12 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;  
 }
 
 header h1 {
   font-size: 7em;
-}
-
-nav {
-  font-family: "Dokdo", system-ui;
-  font-weight: 400;
-  font-style: normal;
-  background: rgba(103, 0, 255, 0.05);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(0.5px);
-  -webkit-backdrop-filter: blur(0.5px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  width: fit-content;
+  padding-top: 0.5em;
 }
 
 nav a {
@@ -178,24 +163,110 @@ nav a {
 
 .pescoco {
   background: rgba(0, 0, 0, 0.8);
-  -webkit-box-shadow: -9px 10px 12px 0px rgba(250, 250, 250, 1);
-  -moz-box-shadow: -9px 10px 12px 0px rgba(250, 250, 250, 1);
   box-shadow: -9px 10px 12px 0px rgba(250, 250, 250, 1);
   backdrop-filter: blur(0px);
-  -webkit-backdrop-filter: blur(0px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   font-family: "Dokdo", system-ui;
   font-weight: 100;
-  width: 90em;
   text-align: justify;
-  padding: 0.8em;
-  margin-top: 5em;
-  margin-bottom: 5em;
-  
-
+  padding: 7em;
+  height: 20em;
+  margin: 9.3em 18em 18em 18em;
+  text-align: center;
 }
 
-.pescoco p{
-  font-size: 3em;
+.pescoco p {
+  font-size: 5em;
 }
+
+.ombros p {
+  font-size: medium;
+}
+
+.round-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  position: absolute;  
+  bottom: 10px;       
+  right: 10px;         
+}
+
+main {
+  height: fit-content;
+  color: #7700ff;
+  background-image: url("/images/teclado.gif");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: "Freckle Face", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;  
+}
+
+.peito {
+  background: rgba(0, 0, 0, 0.8);
+  box-shadow: -9px 10px 12px 0px rgba(250, 250, 250, 1);
+  backdrop-filter: blur(0px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  font-family: "Dokdo", system-ui;
+  font-weight: 100;
+  padding: 7em;
+  height: 10em;
+  margin: 9.3em 18em 1.5em 18em;
+  text-align: center;
+  height: fit-content; 
+}
+
+.ombros h2 {
+  font-size: 5em;
+  padding-top: 0.5em;
+}
+
+.peito p {
+  font-size: 4em;
+}
+
+.lab-button {
+  display: inline-block;
+  background: rgba(0, 0, 0, 0.8);
+  box-shadow: -9px 10px 12px 0px rgb(255, 255, 255);
+  backdrop-filter: blur(0px);
+  color: #ffffff;
+  text-decoration: none;
+  padding: 1em 2em;
+  margin: 0.5em;
+  border-radius: 8px;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  transition: background 0.3s, color 0.3s;
+}
+
+.lab-button:hover {
+  background: rgba(76, 0, 255, 0.5);
+  color: #fff;
+}
+
+#labs {
+  display: flex; 
+  justify-content: center; 
+  margin-bottom: 8em;
+}
+
+#labs ul {
+  display: flex; 
+  padding: 0; 
+}
+
+#labs li {
+  list-style-type: none; 
+}
+
