--- a/lab9/styles.css
+++ b/lab9/styles.css
@@ -1,23 +1,266 @@
-header {
-    height: fit-content;
-    color: #7700ff;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    font-family: "Freckle Face", system-ui;
-    font-weight: 400;
-    font-style: normal;
-    color: rgb(255, 255, 255);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;  
-  }
+/* Reset */
+@import url("https://fonts.googleapis.com/css2?family=Freckle+Face&family=Rubik+Puddles&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dokdo&display=swap");
 
-  h1 {
-    font-size: 3em;
-    margin: 0;
-    padding: 0;
-    color: #7700ff;
-  }
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+  margin-top:                                                                                  em; /* Adiciona espaço entre o body e o header */
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  position: fixed;
+  width: 100%;
+  height: 8em;
+  background-color: #ffd5dc;
+  color: white;
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; 
+  padding-bottom: 0em;
+}
+
+header ul {
+  justify-content: right;
+}
+
+header h1 {
+  font-size: 2em;
+}
+
+body h2 {
+  font-size: 1.5em;
+  padding-top: 2em;
+  padding-bottom: 1em;
+  text-align: center;
+  font-weight: bold;
+  color: white;
+}
+
+nav ul {
+  text-align: center;  
+  list-style: none;
+  padding: 1em;
+  display: flex;
+
+}
+
+nav ul li a {
+  padding-right: 1em;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+main {
+  padding: 2em;
+}
+
+#allProducts, #selecionados {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.produto {
+  background-color: white;
+  margin-top: 2em;
+  border: 1px solid #ffd5dc;
+  border-radius: 8px;
+  padding: 10px;
+  width: 200px;
+  text-align: center;
+}
+
+.produto img {
+  width: 100%;
+  height: auto;
+  border-radius: 4px;
+}
+
+.produto__price {
+  display: block;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+.produto__description {
+  margin: 10px 0;
+}
+
+button {
+  padding: 5px 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: #ffd5dc;
+  color: white;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #6200ff;
+}
+
+
+footer {
+  text-align: center;
+  background-color: #ffd5dc;
+  color: white;
+  padding: 2.6em;
+  margin-top: 2em;
+}
+
+
+#custoTotal {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-top: 1.5em;
+  text-align: center;
+  color: white;
+  margin-bottom: 1.5em;
+}
+
+#cesto {
+  background-color: #ffd5dc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1em;
+  margin-left: -2em;
+  margin-right: -2em;
+}
