--- a/lab9/styles.css
+++ b/lab9/styles.css
@@ -164,11 +164,11 @@ header h1 {
 
 body h2 {
   font-size: 1.5em;
-  padding-top: 2em;
+  padding-top: 7em;
   padding-bottom: 1em;
   text-align: center;
   font-weight: bold;
-  color: white;
+  color: black;
 }
 
 nav ul {
