--- a/lab9/styles.css
+++ b/lab9/styles.css
@@ -143,6 +143,7 @@ body {
 
 header {
   position: fixed;
+  z-index: 1000;
   width: 100%;
   height: 8em;
   background-color: #ffd5dc;
@@ -228,6 +229,11 @@ main {
   color: #ffd5dc; 
   font-size: 1.2em; 
 }
+.produto h3 {
+  font-weight: bold; 
+  font-size: 1.2em; 
+  margin-bottom: 10px; 
+}
 
 .produto__description {
   background-color: #f9f9f9; 
@@ -249,13 +255,13 @@ button {
   color: #333; 
   cursor: pointer;
   font-weight: bold;
-  transition: background-color 0.3s, transform 0.3s; /* Transição suave */
+  transition: background-color 0.3s, transform 0.3s;
 }
 
 button:hover {
-  background-color: #6200ff; /* Cor do botão em hover */
-  color: white; /* Cor do texto em hover */
-  transform: scale(1.05); /* Efeito de aumento ao passar o mouse */
+  background-color: #6200ff;
+  color: white; 
+  transform: scale(1.05); 
 }
 
 
